Added username lookup endpoint. Kinda shoddy.
